syntax = "proto3";
package prices.streaming;

// The request message
message PriceRequest {
  string uic = 1;
  string assetType = 2;
  string requestId = 3;
}

// The response message
message PriceResponse {
  string quote = 1;
}
